Add copyright and postion styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
     <main>
         <div class="left-col">
-            <h1>ODIN</h1>
+            <div class="odin-banner">
+                <img src="/assets/odin-lined.png"  height="100">
+                <h1>ODIN</h1>
+            </div>
+            <small class="copyright">Photo by Halie West on Unsplash</small>
         </div>
         <div class="right-col">
             <div class="text-content">
