Update font sizes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="left-col">
             <div class="odin-banner">
-                <img src="/assets/odin-lined.png"  height="100">
+                <img src="/assets/odin-lined.png"  width="100">
                 <h1>ODIN</h1>
             </div>
             <small class="copyright">Photo by Halie West on Unsplash</small>
