--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="right-col">
             <div class="text-content">
                 <p>This is not a real online service! You know you need something like this in your life to help you realize
-                    your deepest dreams. Sign up <strong><em>now</em></strong> to get started.</p>
+                    your deepest dreams.<br>Sign up <strong><em>now</em></strong> to get started.</p>
     
                 <p>You <em>know</em> you want to.</p>
             </div>
