Add form submit button and login prompt

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                         </fieldset> 
                     </div>
                     </div>
+
+                    <div class="button-container">
+                    <button type="submit">Create Account</button>
+                    <p>Already have an account? <a href="#">Log in</a></p>
+                </div>
                 </form>
             </div>
 
