Add required to inputs, Remove default border on labels

--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
                     <div class="field-container">
                         <div>
                         <fieldset>
-                            <label id="first-name">FIRST NAME</label>
-                            <input for="first-name" type="text">
+                            <label id="first-name">*FIRST NAME</label>
+                            <input for="first-name" type="text" required>
                         </fieldset>
                         <fieldset>
-                            <label id="email">EMAIL</label>
-                            <input for="email" type="email">
+                            <label id="email"*>EMAIL</label>
+                            <input for="email" type="email" required>
                         </fieldset>
                         <fieldset>
-                            <label id="password">PASSWORD</label>
-                            <input for="password" type="password">
+                            <label id="password">*PASSWORD</label>
+                            <input for="password" type="password" required>
                         </fieldset> 
                     </div>
                     <div>
                         <fieldset>
-                            <label id="last-name">LAST NAME</label>
-                            <input for="last-name" type="text">
+                            <label id="last-name">*LAST NAME</label>
+                            <input for="last-name" type="text" required>
                         </fieldset>
                         <fieldset>
-                            <label id="phone">PHONE NUMBER</label>
-                            <input for="phone" type="number">
+                            <label id="phone">*PHONE NUMBER</label>
+                            <input for="phone" type="number" required>
                         </fieldset>
                         <fieldset>
-                            <label id="confirm-password">CONFIRM PASSWORD</label>
-                            <input for="confirm-password" type="password">
+                            <label id="confirm-password">*CONFIRM PASSWORD</label>
+                            <input for="confirm-password" type="password" required>
                         </fieldset> 
                     </div>
                     </div>
