Refactor form inputs for validation, Update label and input styles

--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
             </div>
 
             <div class="form-container">
-                <form>
+                <form >
                     <legend>Let's Do This!</legend>
                     <div class="field-container">
                         <div>
                         <fieldset>
-                            <label id="first-name">*FIRST NAME</label>
-                            <input for="first-name" type="text" required>
+                            <label id="first-name">FIRST NAME</label>
+                            <input for="first-name" type="text" name="first-name" minlength="2" required>
                         </fieldset>
                         <fieldset>
                             <label id="email"*>EMAIL</label>
-                            <input for="email" type="email" required>
+                            <input for="email" type="email"  name="email" required>
                         </fieldset>
                         <fieldset>
-                            <label id="password">*PASSWORD</label>
-                            <input for="password" type="password" required>
+                            <label id="password">PASSWORD</label>
+                            <input for="password" type="password"  name="password" minlength="8" required>
                         </fieldset> 
                     </div>
                     <div>
                         <fieldset>
-                            <label id="last-name">*LAST NAME</label>
-                            <input for="last-name" type="text" required>
+                            <label id="last-name">LAST NAME</label>
+                            <input for="last-name" type="text" name="last-name" minlength="2" required>
                         </fieldset>
                         <fieldset>
-                            <label id="phone">*PHONE NUMBER</label>
-                            <input for="phone" type="number" required>
+                            <label id="phone">PHONE NUMBER</label>
+                            <input for="phone" type=tel" name="phone" required>
                         </fieldset>
                         <fieldset>
-                            <label id="confirm-password">*CONFIRM PASSWORD</label>
-                            <input for="confirm-password" type="password" required>
+                            <label id="confirm-password">CONFIRM PASSWORD</label>
+                            <input for="confirm-password" type="password" minlength="8" name="confirm-password" required>
                         </fieldset> 
                     </div>
                     </div>
